--- a/mongocrypt-sys/Cargo.toml
+++ b/mongocrypt-sys/Cargo.toml
@@ -18,5 +18,6 @@ links = "mongocrypt"
 [dependencies]
 
 [dev-dependencies]
-bson = "2.6.0"
+#bson = "2.6.0"
+bson = { git = "https://github.com/dvn8weil/bson-rust", branch = "2.6.x", package = "bson", version = "2.6.0"}
 serde_json = "1.0.81"
