--- a/mongocrypt/Cargo.toml
+++ b/mongocrypt/Cargo.toml
@@ -20,8 +20,8 @@ compile_fail = []
 
 [dependencies]
 mongocrypt-sys = { path = "../mongocrypt-sys", version = "0.1.4" }
-bson-2 = { git = "https://github.com/mongodb/bson-rust", branch = "2.15.x", package = "bson", version = "2.13.0", optional = true }
-bson-3 = { git = "https://github.com/mongodb/bson-rust", branch = "main", package = "bson", version = "3.0.0", optional = true }
+bson-2 = { git = "https://github.com/dvn8weil/bson-rust", branch = "2.15.x", package = "bson", version = "2.13.0", optional = true }
+bson-3 = { git = "https://github.com/dvn8weil/bson-rust", branch = "main", package = "bson", version = "3.0.0", optional = true }
 serde = "1.0.125"
 once_cell = "1.17.0"
 
